# zero2prod-axum

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md  spec.yaml
configuration/: base.yaml  production.yaml
entity/: Cargo.toml
entity/src/: lib.rs  subscriptions.rs
entity/src/entities/: idempotency.rs  mod.rs  prelude.rs  subscription_tokens.rs  subscriptions.rs  users.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20250116_212701_create_subscriptions_table.rs  m20250116_212701_create_table.rs  m20250218_152412_create_subscription_tokens.rs  m20250218_152412_create_subscription_tokens_table.rs  m20250223_072332_create_users_table.rs  m20250419_075152_add_seed_user.rs  m20250420_132533_create_idempotency_table.rs
scripts/: drop-db.sh  init-redis.sh  init_db.sh  post-subscriptions.ps1
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  health_check.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  login.html  login.rs  login_error.html  logout.rs
src/routes/admin/newsletter/: get.html  get.rs  post.rs
src/routes/admin/password/: get.html  get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
