[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
config = "0.15.6"
sea-orm-codegen = "1.1.4"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.12.0", features = ["v4"] }

[dependencies.sea-orm]
version = "1.1.4"
default-features = false
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
]

[dependencies.entity]
path = "entity"

[dependencies.migration]
path = "migration"

[dev-dependencies]
reqwest = "0.12.12"
